test/cases/aarch64-macos/hello_world_with_updates.1.zig
pub export fn main() noreturn {}

// error
//
// :1:32: error: function declared 'noreturn' returns
// :1:22: note: 'noreturn' declared here
